fix spacing

--- a/src/Modal.css
+++ b/src/Modal.css
@@ -8,22 +8,48 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 1000;
+    z-index: 100000;
+    font-family: "Silkscreen", sans-serif;
+  }
+  input {
+    font-family: "Silkscreen", sans-serif;
+  }
+  button {
+    font-family: "Silkscreen", sans-serif;
+    margin: 10px;
   }
   
   .modal-content {
     background-color: white;
-    padding: 20px;
+    padding: 0px;
+    padding-top: 0px;
+    padding-left: 0px;
     border-radius: 5px;
-    width: 300px;
+    width: 30vw;
     text-align: center;
+    justify-content: flex-start;
+    align-items: center;
+    z-index: 100001;
+  }
+  
+  .modal-title-bar {
+    display: flex;
+    justify-content: space-between; /* Revert to space-between */
+    align-items: center;
+    background-color: #000080; /* Example background color */
+    color: #fff; /* Text color */
+    padding: 0px;
+    border-radius: 5px 5px 0 0; /* Rounded corners at the top */
+  }
+  
+  .modal-title {
+    font-size: 1.5em; /* Adjust the title size as needed */
   }
   
   .close-button {
-    margin-top: 10px;
-    background-color: #f44336;
-    color: white;
+    background: none;
     border: none;
-    padding: 10px;
+    color: white;
     cursor: pointer;
+    font-size: 1.2em; /* Adjust size as needed */
   }
