--- a/src/merchModal.css
+++ b/src/merchModal.css
@@ -19,6 +19,7 @@
     background-color: #c0c0c0;
     border: 2px solid #000;
     box-shadow: 2px 2px 5px #000;
+    border-radius: 7px; /* Round the corners by 5px */
 }
 .lower-container {
   display: flex;
@@ -51,10 +52,10 @@
 
 .modal-title-bar {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-between; /* Revert to space-between */
     align-items: center;
-    background-color: #000080;
-    color: #fff;
+    background-color: #000080; /* Example background color */
+    color: #fff; /* Text color */
     padding: 5px;
 }
 
